# rdma

libfabric/: CMakeLists.txt  main.c  main_lim.c
libfabric/include/: hmem.h  shared.h
libfabric/src/: hmem.c  shared.c
librdmacm/: rcopy.c
